Fix focus order and button visibility on notification

This CL fixes the wrong reverse focus order of notification (see the issue for detail). Previously the close and settings buttons are skipped in reverse order.

This also fixes the visibility of close and settings button. These buttons should be visible only when they have a focus. Previously they are visible even when the focus is not on these buttons but on the notification.

BUG=739293
TEST=manual test

Change-Id: I8af330314410bf4b1a26be51d86cee312b4344ab