ui/message_center/views/notification_control_buttons_view.cc
@@ -39,6 +39,11 @@ NotificationControlButtonsView::NotificationControlButtonsView(
       bgcolor_target_(kInitialBackgroundColor) {
   DCHECK(message_view);
   SetLayoutManager(new views::BoxLayout(views::BoxLayout::kHorizontal));
+
+  // Use layer to change the opacity.
+  SetPaintToLayer();
+  layer()->SetFillsBoundsOpaquely(false);
+
   SetBackground(views::CreateSolidBackground(kInitialBackgroundColor));
 }
 
@@ -90,6 +95,7 @@ void NotificationControlButtonsView::ShowSettingsButton(bool show) {
 
 void NotificationControlButtonsView::SetBackgroundColor(
     const SkColor& target_bgcolor) {
+  DCHECK(background());
   if (background()->get_color() != target_bgcolor) {
     bgcolor_origin_ = background()->get_color();
     bgcolor_target_ = target_bgcolor;
@@ -100,6 +106,12 @@ void NotificationControlButtonsView::SetBackgroundColor(
     bgcolor_animation_->SetDuration(kBackgroundColorChangeDuration);
     bgcolor_animation_->Start();
   }
+}
+
+void NotificationControlButtonsView::SetVisible(bool visible) {
+  DCHECK(layer());
+  layer()->SetOpacity(visible ? 1. : 0.);
+  set_can_process_events_within_subtree(visible);
 }
 
 void NotificationControlButtonsView::RequestFocusOnCloseButton() {
